--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,13 @@
 
   <div class="wrapper">
     <header>
-      {%- include header.html -%}
+      <nav class="site-nav">
+        <ul>
+          <li><a href="{{ site.baseurl }}/">{{ site.title }}</a></li>
+          {% for page in site.pages %} 
+            <li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
+          {% endfor %}
+        </ul>
     </header>
 
 
