--- a/_layouts/blogs.html
+++ b/_layouts/blogs.html
@@ -74,5 +74,13 @@ layout: default
     {%- endif %}
 
   {%- endif -%}
-
+  <header>
+    <nav class="site-nav">
+      <ul>
+        <li><a href="{{ site.baseurl }}/">{{ site.title }}</a></li>
+        {% for page in site.pages %} 
+          <li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
+        {% endfor %}
+      </ul>
+  </header>
 </div>
