--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,12 @@
         <ul>
           <li><a href="{{ site.baseurl }}/">{{ site.title }}</a></li>
           {% for page in site.pages %}
-            {% unless page.title contains 'Computer Science "A"' or page.title contains 'Computer Science Principles' or page.title contains 'Computer Science and Software Engineering'} 
-            <li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
+            {% unless page.title contains 'exclude' or page.title contains 'another_exclude' %}
+              <li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
             {% endunless %}
           {% endfor %}
         </ul>
+      </nav>
     </header>
 
 
