--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 
+h1, h2, h3 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 .site-nav {
     background-color: #0097B2; 
     padding: 10px 0;
