--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,3 +33,14 @@ h1, h2, h3 {
 .site-nav a:hover {
     color: #69C4D4; 
 }
+
+.centered-gif {
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+
+.centered-gif img {
+    max-width: 100%;
+    max-height: 100%;
+}
