--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,8 @@ h1, h2, h3 {
     justify-content: center;
     align-items: center;
 }
+
+.centered-gif img {
+    max-width: 100%;
+    max-height: 100%;
+}
