--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -24,112 +24,50 @@ Load all posts with site
 <!-- Iterate through Course Units -->
 {%endcomment%}
 
-{% for unit in units %}
-{% assign unitKey = "Unit" | append: unit %}
-{% assign unitData = course[unitKey] %}
-<h2>
-  {{ unitKey }}: {{ unitData.title }}
-</h2>
-<p>  {{ unitData.description }} </p>
 
-{% assign start = unitData.start %}
-{% assign end = unitData.end %}
-
-{%comment%} 
-<!-- Output Column Headings for Blogs -->
-{%endcomment%}
-
-<table>
-  <tr>
-    <th>Week</th>
-    <th>Plans</th>
-    <th>Hacks(Todo)</th>
-    <th>Tangibles</th>
-  </tr>
-
-  {%comment%} 
-  <!-- These loops group blogs according to Row (week) and Column (category) 
-    units = empty array
-    sym = value to be used as a separator
-    deli = sym forced to array
-  -->
-  {%endcomment%}
-
-  {% assign units = null | compact %}  
-  {% assign sym = "|||" %} 
-  {% assign deli = sym | compact %} 
-
-  {% for index in (start..end) -%}
-    {% assign plans = null | compact %}
-    {% assign hacks = null | compact %}
-    {% assign tangibles = null | compact %}
-
-
-  {%comment%} 
-  <!-- looping through all posts -->
-  {%endcomment%}
-
-    {% for post in posts %}
-      {% if post.courses[page.course] %}
-  {%comment%} 
-  <!-- prepare data blog post data for evaluation -->
-  {%endcomment%}
-        {% assign week = post.courses[page.course].week | tangibles: 0 %}
-        {% assign title = post.title | compact %}
-        {% assign url = post.url | compact %}
-  
-  {%comment%} 
-  <!-- process posts for current week -->
-  {%endcomment%}
-        {% if week == index %} 
-
-  {%comment%} 
-  <!-- organizing blogs by type -->
-  {%endcomment%}
-          {% if post.type == "plans" %} 
-              {% assign plans = plans | unshift: title %}
-              {% assign plans = plans | unshift: url %}
-          {% elsif post.type == "hacks" %}
-              {% assign hacks = hacks | unshift: title %}
-              {% assign hacks = hacks | unshift: url %} 
-          {% elsif post.type == "tangibles" %}
-              {% assign tangibles = tangibles | unshift: title %}
-              {% assign tangibles = tangibles | unshift: url %} 
-          {% else %}
-              {% assign uk = uk | unshift: title %}
-              {% assign uk = uk | unshift: url %}     
-          {% endif %}
-
-        {% endif %}
-      {% endif %}
-    {% endfor %}
-
-  {%comment%} 
-  <!-- ordering units and inserting column delimiters -->
-  {%endcomment%}
-  {% assign units = units | concat:plans | concat:deli | concat:hacks | concat:deli | concat:tangibles  %}
-
-  {%comment%} 
-  <!-- This Loop is maximum iterationss, since elements are pairs it will decrement a extra times at the end -->
-  {%endcomment%}
-  <tr>
-  <td> {{ index }} </td> 
-  <td>
-  {% for i in (0..units.size) -%} 
-    {% if units.size == 0 %}
-      {% break %}
-    {% elsif units[0] == sym %} <!-- make new column -->
-  </td>
-  <td>
-      {% assign units = units | shift %} <!-- remove delimiter -->
-    {% else %} <!-- make a link in the column -->
-      - <a href="{{site.baseurl}}/{{units[0]}}">{{units[1]}}</a> <br/> 
-      {% assign units = units | shift | shift %} <!-- remove title and url -->
-    {% endif %}
-  {% endfor %}
-  </td>
-  </tr>
-  {% endfor %}
-
-</table>
+<style type="text/css">
+  .tg  {border-collapse:collapse;border-spacing:0;}
+  .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+    overflow:hidden;padding:10px 5px;word-break:normal;}
+  .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+    font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+  .tg .tg-fu3y{background-color:#b5d3fd;border-color:inherit;font-style:italic;font-weight:bold;text-align:center;vertical-align:top}
+  .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+  </style>
+  <table class="tg">
+  <thead>
+    <tr>
+      <th class="tg-fu3y">Week 1</th>
+      <th class="tg-fu3y">Hacks Plan</th>
+      <th class="tg-fu3y">Tangibles</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="tg-0pky">Mon 8/21</td>
+      <td class="tg-0pky">-Fix live server<br>-Finish installations</td>
+      <td class="tg-0pky"></td>
+    </tr>
+    <tr>
+      <td class="tg-0pky">Tue 8/22</td>
+      <td class="tg-0pky">- Finalize theme<br>- Customize site</td>
+      <td class="tg-0pky"></td>
+    </tr>
+    <tr>
+      <td class="tg-0pky">Wed 8/23</td>
+      <td class="tg-0pky">- Live Review</td>
+      <td class="tg-0pky"></td>
+    </tr>
+    <tr>
+      <td class="tg-0pky">Thu 8/24</td>
+      <td class="tg-0pky">TBD</td>
+      <td class="tg-0pky"></td>
+    </tr>
+    <tr>
+      <td class="tg-0pky">Fri 8/25</td>
+      <td class="tg-0pky">TBD</td>
+      <td class="tg-0pky"></td>
+    </tr>
+  </tbody>
+  </table>
 {% endfor %}
