schedule 3 week update

--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -49,3 +49,77 @@ layout: default
     </tr>
   </tbody>
   </table>
+
+  <table class="tg">
+    <thead>
+      <tr>
+        <th class="tg-fu3y">Week 2</th>
+        <th class="tg-fu3y">Hacks Plan</th>
+        <th class="tg-fu3y">Tangibles</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="tg-0pky">Mon 8/28</td>
+        <td class="tg-0pky">TBD<br></td>
+        <td class="tg-0pky"></td>
+      </tr>
+      <tr>
+        <td class="tg-0pky">Tue 8/29</td>
+        <td class="tg-0pky">- TBD<br>- </td>
+        <td class="tg-0pky"></td>
+      </tr>
+      <tr>
+        <td class="tg-0pky">Wed 8/30</td>
+        <td class="tg-0pky">- TBD</td>
+        <td class="tg-0pky"></td>
+      </tr>
+      <tr>
+        <td class="tg-0pky">Thu 8/31</td>
+        <td class="tg-0pky">TBD</td>
+        <td class="tg-0pky"></td>
+      </tr>
+      <tr>
+        <td class="tg-0pky">Fri 9/1</td>
+        <td class="tg-0pky">TBD</td>
+        <td class="tg-0pky"></td>
+      </tr>
+    </tbody>
+    </table>
+
+    <table class="tg">
+      <thead>
+        <tr>
+          <th class="tg-fu3y">Week 3</th>
+          <th class="tg-fu3y">Hacks Plan</th>
+          <th class="tg-fu3y">Tangibles</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="tg-0pky">Mon 9/4</td>
+          <td class="tg-0pky">TBD<br></td>
+          <td class="tg-0pky"></td>
+        </tr>
+        <tr>
+          <td class="tg-0pky">Tue 9/5</td>
+          <td class="tg-0pky">- TBD<br>- </td>
+          <td class="tg-0pky"></td>
+        </tr>
+        <tr>
+          <td class="tg-0pky">Wed 9/6</td>
+          <td class="tg-0pky">- TBD</td>
+          <td class="tg-0pky"></td>
+        </tr>
+        <tr>
+          <td class="tg-0pky">Thu 9/7</td>
+          <td class="tg-0pky">TBD</td>
+          <td class="tg-0pky"></td>
+        </tr>
+        <tr>
+          <td class="tg-0pky">Fri 9/8</td>
+          <td class="tg-0pky">TBD</td>
+          <td class="tg-0pky"></td>
+        </tr>
+      </tbody>
+      </table>
