--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -30,7 +30,7 @@ layout: default
     <tr>
       <td class="tg-0pky">Tue 8/22</td>
       <td class="tg-0pky">- Finalize theme<br>- Customize site</td>
-      <td class="tg-0pky"></td>
+      <td class="tg-0pky">[Link](https://github.com/tanishapatil1234/labnb/issues/1)</td>
     </tr>
     <tr>
       <td class="tg-0pky">Wed 8/23</td>
