hacks link update

--- a/_layouts/binary.html
+++ b/_layouts/binary.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <html>
+<h2>Binary Calculators</h2>
 <form>
       <label for="binary1">Binary Number 1:</label>
       <input type="text" id="binary1" name="binary1"><br><br>
