--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -24,13 +24,13 @@ layout: default
   <tbody>
     <tr>
       <td class="tg-0pky">Mon 8/21</td>
-      <td class="tg-0pky">-Fix live server<br>-Finish installations</td>
-      <td class="tg-0pky"></td>
+      <td class="tg-0pky">-Fix live server<br>-Finish installations<br>-Binary Calculator</td>
+      <td class="tg-0pky"><a href='https://tanishapatil1234.github.io/labnb/csse.html'>hack</a></td>
     </tr>
     <tr>
       <td class="tg-0pky">Tue 8/22</td>
       <td class="tg-0pky">- Finalize theme<br>- Customize site</td>
-      <td class="tg-0pky">[Link](https://github.com/tanishapatil1234/labnb/issues/1)</td>
+      <td class="tg-0pky"><a href='https://github.com/tanishapatil1234/labnb/issues/1'>hack </a></td>
     </tr>
     <tr>
       <td class="tg-0pky">Wed 8/23</td>
