--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -29,7 +29,7 @@ layout: default
     </tr>
     <tr>
       <td class="tg-0pky">Tue 8/22</td>
-      <td class="tg-0pky">- Finalize theme<br>- Customize site</td>
+      <td class="tg-0pky">- Finalize theme<br>- Customize site <br> -Facetime tonight to discuss my themes issues and Sreeja's issues with connecting pages to buttons on her nav bar. </td>
       <td class="tg-0pky"><a href='https://github.com/tanishapatil1234/labnb/issues/1'>hack </a></td>
     </tr>
     <tr>
